# Datenanalyse_mit_Python_SS2026

./: .gitattributes  README.md  main.py  pyproject.toml
_01_Einstieg/: Check_Packages.ipynb  Hello World.ipynb  Markdown - nach Vorlesung am 1.4.2026.ipynb  Markdown.ipynb  hello_world.py
_02_Python/: Python - Einstieg - Teil 1 - Datentypen - nach Vorlesung am 1.4.2026.ipynb  Python - Einstieg - Teil 1 - Datentypen.ipynb  Python - Einstieg - Teil 2 - math library - nach Vorlesung am 1.4.2026.ipynb  Python - Einstieg - Teil 2 - math library.ipynb  Python - Einstieg - Teil 3 - Variablen - nach Vorlesung am 1.4.2026.ipynb  Python - Einstieg - Teil 3 - Variablen.ipynb  Python - Einstieg - Teil 4 - String - nach Vorlesung am 1.4.2026.ipynb  Python - Einstieg - Teil 4 - String.ipynb  Python - Einstieg - Teil 5 - Mutable und Immutable - nach Vorlesung am 1.4.2026.ipynb  Python - Einstieg - Teil 5 - Mutable und Immutable.ipynb  Python - Einstieg - Teil 6 - Tupels - nach Vorlesung am 22.4.2026.ipynb  Python - Einstieg - Teil 6 - Tupels.ipynb  Python - Einstieg - Teil 7 - Set - nach Vorlesung am 22.4.2026.ipynb  Python - Einstieg - Teil 7 - Set.ipynb  Python - Einstieg - Teil 8 - List - nach Vorlesung am 22.4.2026.ipynb  Python - Einstieg - Teil 8 - List.ipynb  Python - Einstieg - Teil 9 - dict - nach Vorlesung am 22.4.2026.ipynb  Python - Einstieg - Teil 9 - dict.ipynb  Python - Einstieg - Teil10 - Kontrollstrukturen - nach Vorlesung am 22.4.2026.ipynb  Python - Einstieg - Teil10 - Kontrollstrukturen.ipynb  Python - Einstieg - Teil11 - range - nach Vorlesung am 22.4.2026.ipynb  (+11 more)
(+24 files in other folders)
